--- a/articles/service-health/TOC.yml
+++ b/articles/service-health/TOC.yml
@@ -28,7 +28,7 @@
     href: azure-status-overview.md
   - name: Resource Health
     href: resource-health-overview.md
-  - name: Azure Service Health Portal Update
+  - name: Azure Service Health Portal
     href: service-health-portal-update.md
   - name: Azure Service Health Portal (classic)
     href: service-health-overview.md
